# ChineseChess

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  notes.md
include/: Chess_i.h  ChineseChess.h  Client.h  Server.h  graphic.h
src/: ChineseChess.cpp  client.cpp  graphic.cpp  main.cpp  server.cpp
